@@ -22,12 +22,10 @@ import org.apache.kafka.server.log.remote.storage.RemoteLogSegmentFileset.Remote
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 
@@ -43,16 +41,15 @@ public final class LocalTieredStorageSnapshot {
     }
 
     public List<TopicPartition> getTopicPartitions() {
-        final List<TopicPartition> topicPartitions = snapshot.topicIdPartitions.stream()
+        return snapshot.topicIdPartitions.stream()
                 .map(TopicIdPartition::topicPartition)
-                .collect(Collectors.toList());
-        return Collections.unmodifiableList(topicPartitions);
+                .toList();
     }
 
     public List<RemoteLogSegmentFileset> getFilesets(final TopicPartition topicPartition) {
         return snapshot.records.values().stream()
                 .filter(fileset -> fileset.getRemoteLogSegmentId().topicIdPartition().topicPartition().equals(topicPartition))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public int size() {
